[package]
name = "imagesink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.0"
speedy2d = { version = "1.13.3", path = "../Speedy2D", default-features=false, features = ["windowing", "windowing-wayland", "image-loading"] }
glam = "0.23"